Fix footer links overflow issue on small screen resolutions

--- a/web/src/custom.css
+++ b/web/src/custom.css
@@ -109,7 +109,7 @@ a[href^="https://unsplash.com/@theforestbirds"] {display:none !important}
 a[href^="https://goauthentik.io?utm_source=authentik&utm_medium=flow"] {display:none !important;}
 
 .pf-c-drawer__content, .pf-c-drawer__panel, .pf-c-drawer__panel-main {
-    overflow: visible !important;
+    /*overflow: visible !important;*/
 }
 
 .pf-c-login__main > :last-child:not(.pf-c-login__main-footer) {
@@ -118,15 +118,35 @@ a[href^="https://goauthentik.io?utm_source=authentik&utm_medium=flow"] {display:
 .pf-c-login__main-header.pf-c-brand.ak-brand{
     padding-top: 2rem;
 }
-.pf-c-login__main{
-    overflow-scrolling: auto;
+.ak-login-container{
+    /*overflow-scrolling: auto;*/
     padding-top: 1rem;
     overflow: auto;
+    height: fit-content;
 }
 
-.pf-c-login__main::-webkit-scrollbar-thumb {
+.pf-c-drawer__body {
+    overflow: hidden;
+}
+
+.pf-c-list.pf-m-inline li {
+    margin-right: 1rem!important;
+    margin-left: 1rem!important;
+}
+.pf-c-list.pf-m-inline li:not(:first-child) {
+    display: none;
+}
+
+.tc-text {
+    padding: 1rem;
+    color: var(--ak-dark-foreground);
+    text-align: center;
+}
+
+.ak-login-container::-webkit-scrollbar-thumb {
     overflow: scroll;
-    background-color: var(--ak-dark-foreground-link);
+    /*background-color: var(--pf-c-button--m-primary--BackgroundColor);*/
+    background-color: var(--ak-dark-foreground);
 }
 
 .pf-c-login.sidebar_left .ak-login-container, .pf-c-login.sidebar_right .ak-login-container {
